--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build -t udagram-frontend .
-  - docker tag udagram-api-feed fadyfawzy/udagram-frontend
+  - docker tag udagram-frontend fadyfawzy/udagram-frontend
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push fadyfawzy/udagram-api-feed
+  - docker push fadyfawzy/udagram-frontend
